# amiko-e2-pli

./: RecordTimer.py  SleepTimer.py  configure.ac  mytest.py
data/: setup.xml  skin_default.xml  startwizard.xml  tutorialwizard.xml
data/countries/: Makefile.am
lib/base/: filepush.cpp
lib/driver/: rc.cpp  rcinput.cpp  vfd.cpp
lib/dvb/: db.cpp  decoder.cpp  dvb.cpp  epgcache.cpp  fastscan.cpp  (+4 more)
lib/python/Plugins/Extensions/: Makefile.am
lib/python/Plugins/Extensions/DVDBurn/: DVDProject.py  DreamboxDVD.ddvdp.xml  Process.py  TitleList.py
lib/python/Plugins/Extensions/MediaPlayer/: plugin.py
lib/python/Plugins/Extensions/SparkVFD/: Makefile.am
lib/python/Plugins/SystemPlugins/: Makefile.am
lib/python/Plugins/SystemPlugins/CleanupWizard/: cleanupwizard.xml
lib/python/Plugins/SystemPlugins/HdmiCEC/: plugin.py
lib/python/Plugins/SystemPlugins/NFIFlash/: downloader.py
lib/python/Plugins/SystemPlugins/NetworkWizard/: NetworkWizard.py  networkwizard.xml
lib/python/Plugins/SystemPlugins/OldSoftwareUpdate/: plugin.py
lib/python/Plugins/SystemPlugins/SoftwareManager/: imagewizard.xml  plugin.py
lib/python/Plugins/SystemPlugins/SoftwareUpdate/: plugin.py
lib/python/Plugins/SystemPlugins/UnionTunerType/: Makefile.am  plugin.py
lib/python/Plugins/SystemPlugins/VFD-Icons/: plugin.py
po/: Makefile.am  ar.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en.po  es.po  et.po  fa.po  fi.po  fr.po  fy.po  he.po  hr.po  hu.po  is.po  it.po  lt.po  lv.po  nl.po  no.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  th.po  tr.po  uk.po
(+22 files in other folders)
