installdir = $(pkgdatadir)/countries

dist_install_DATA = \
	bg.png \
	cz.png \
	de.png \
	dk.png \
	en.png \
	es.png \
	ee.png \
	fi.png \
	fr.png \
	gr.png \
	hr.png \
	hu.png \
	ir.png \
	is.png \
	it.png \
	lt.png \
	lv.png \
	missing.png \
	nl.png \
	no.png \
	pl.png \
	pt.png \
	ro.png \
	ru.png \
	se.png \
	si.png \
	sk.png \
	tr.png \
	ua.png \
	yu.png
